add service repository method to get average rating

--- a/templates/widget/index.html.twig
+++ b/templates/widget/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
+{% block title %}Hotel ratings{% endblock %}
 
 {% block body %}
 <style>
@@ -9,12 +9,10 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Hotel ratings</h1>
 
-    This friendly message is coming from:
     <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/WidgetController.php'|file_link(0) }}">src/Controller/WidgetController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/widget/index.html.twig'|file_link(0) }}">templates/widget/index.html.twig</a></code></li>
+        <li>Hotel <code>{{hotel}}</code> average rating is <code>{{averageRating}}</code></li>
     </ul>
 </div>
 {% endblock %}
