front part - build widget iframe by widget id, update templates

--- a/templates/widget/widget.html.twig
+++ b/templates/widget/widget.html.twig
@@ -5,5 +5,5 @@
 
 <div class="example-wrapper">
     <h3>Hotel ratings</h3>
-    <div>{{message}}</div>
+    <div>Hotel <code>{{hotel}}</code> average rating is <code>{{averageRating}}</code></div>
 </div>
