--- a/templates/widget/index.html.twig
+++ b/templates/widget/index.html.twig
@@ -1,18 +1,10 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Hotel ratings{% endblock %}
-
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hotel ratings</h1>
-
-    <ul>
-        <li>Hotel <code>{{hotel}}</code> average rating is <code>{{averageRating}}</code></li>
-    </ul>
-</div>
+{% block javascripts %}
+<script type='text/javascript'>
+window.onload = function() {
+    var iframe = document.createElement('iframe');
+    iframe.style.display = "none";
+    iframe.src = '{{ url('widget-get', {'id' : id}) }}';
+    document.body.appendChild(iframe);
+};
+</script>
 {% endblock %}
